[package]
name = "os"
version = "0.1.0"
authors = ["Matthew Lloyd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.2"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]